# pallas-analysis

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeCache.txt  CMakeLists.txt  README.md  config.toml  pallas.pc.in
.github/workflows/: cmake.yml  eztrace.yml
analysis/plot/: .gitignore  compression.csv
analysis/prog/: lulesh_trace_size.sh  nas_analysis.sh  nas_comp_write.py  nas_comp_write.sh  nas_details.py  nas_durations_eztrace.sh  nas_durations_vanilla.sh  nas_overhead.py  nas_overhead.sh  nas_overhead_mean.sh  nas_trace_size.sh  nas_trace_size_mean.sh  overhead.py  overhead.sh  pcw_details.py  trace_size.sh  vectors.py  vectors_lulesh.py
analysis/res/: durations.csv  lulesh_trace_size.csv  nas_comp_write.csv  nas_comp_write_mean.csv  nas_durations.csv  nas_eztrace_time_mean.csv  nas_overhead.csv  nas_overhead_mean.csv  nas_trace_length.csv  nas_trace_size.csv  nas_trace_size_mean.csv  nas_vanilla_time_mean.csv  overhead.csv  trace_size.csv
apps/: CMakeLists.txt  README.md  pallas_comm_matrix.cpp  pallas_durations.cpp  pallas_editor.cpp  pallas_info.cpp  pallas_print.cpp  pallas_test_durations.cpp
build_pallas_eztrace/: building_eztrace_pallas.sh  eztrace_pallas.env  setup_all.sh
cmake_modules/: FindSZ.cmake  FindZFP.cmake  PrintOpts.cmake
doc/pthread_tracer/: Makefile  tracer.c  tracer.h
docker/: Dockerfile_eztrace  Dockerfile_pallas_test  build_docker_images.sh  publish_docker_images.sh
libraries/htf/include/htf/: htf_linked_vector.h
libraries/otf2/: CMakeLists.txt  otf2_config.in
libraries/otf2/include/otf2/: OTF2_Archive.h  OTF2_AttributeValue.h  OTF2_DefReaderCallbacks.h  OTF2_DefWriter.h  OTF2_Definitions.h  OTF2_EvtReaderCallbacks.h  OTF2_GeneralDefinitions.h  OTF2_GlobalDefReaderCallbacks.h  OTF2_GlobalDefWriter.h  otf2.h
libraries/otf2/src/: OTF2_Archive.c  OTF2_AttributeList.c  OTF2_DefReaderCallbacks.c  OTF2_DefWriter.c  OTF2_EventSizeEstimator.c  OTF2_EvtReader.c  OTF2_EvtReaderCallbacks.c  OTF2_EvtWriter.c  OTF2_GlobalDefReader.c  OTF2_GlobalDefReaderCallbacks.c  OTF2_GlobalDefWriter.c  OTF2_GlobalEvtReader.c  OTF2_GlobalEvtReaderCallbacks.c  OTF2_GlobalSnapReader.c  OTF2_GlobalSnapReaderCallbacks.c  OTF2_IdMap.c  OTF2_MarkerReader.c  OTF2_MarkerReaderCallbacks.c  OTF2_MarkerWriter.c  OTF2_Reader.c  OTF2_Reader.cpp  OTF2_SnapReader.c  OTF2_SnapReaderCallbacks.c  OTF2_SnapWriter.c  OTF2_Thumbnail.c  otf2_estimator.cpp  otf2_estimator_inc.cpp  otf2_print.c
libraries/pallas/: CMakeLists.txt  Doxyfile.in  pallas.config
libraries/pallas/include/pallas/: nikolai.h  pallas.h  pallas_archive.h  pallas_attribute.h  pallas_config.h.in  pallas_dbg.h  pallas_hash.h  pallas_linked_vector.h  pallas_log.h  pallas_parameter_handler.h  pallas_read.h  pallas_record.h  pallas_storage.h  pallas_timestamp.h  pallas_write.h
libraries/pallas/src/: pallas.cpp  pallas_archive.cpp  pallas_attribute.cpp  pallas_dbg.cpp  pallas_hash.cpp  pallas_linked_vector.cpp  pallas_parameter_handler.cpp  pallas_read.cpp  pallas_record.cpp  pallas_storage.cpp  pallas_timestamp.cpp  pallas_write.cpp
libraries/pallas_python/: CMakeLists.txt  global_archive.cpp  grammar.cpp  grammar.h  pallas_python.cpp  pallas_python.h  structure.cpp  structure.h  trace_structure.cpp
perf/: simu.py  test.csv
perf/.ipynb_checkpoints/: Data_visu-checkpoint.ipynb
run_benchmarks/: .gitignore  README.md  clean_benchmarks.sh  make_lulesh.sh  make_nas.sh  run_lulesh.sh  run_lulesh_details.sh  run_lulesh_vectors.sh  run_nas.sh  run_nas_details.sh  run_nas_vectors.sh
run_benchmarks/patches_nas/: 0001-100.patch  0002-1000.patch  0003-10000.patch  0004-100000.patch  0005-500000.patch  0006-1000000.patch
run_benchmarks/run_lulesh/: .gitignore
run_benchmarks/run_lulesh/LULESH/: Makefile  lulesh2.0
run_benchmarks/run_lulesh/traces/lulesh_trace_3/: eztrace_log.pallas
run_benchmarks/run_lulesh/traces/lulesh_trace_4/: eztrace_log.pallas
run_benchmarks/run_lulesh/traces/lulesh_trace_5/: eztrace_log.pallas
run_benchmarks/run_lulesh/traces/lulesh_trace_7/: eztrace_log.pallas
run_benchmarks/run_lulesh/vectors/: write.csv  write_details.csv  write_dur_subvec.csv  write_dur_subvec_details.csv  write_duration_vector.csv  write_duration_vector_details.csv  write_subvec.csv  write_subvec_details.csv  write_vector.csv  write_vector_details.csv  zfp.csv  zfp_details.csv
run_benchmarks/run_nas_benchmark/: .gitignore
run_benchmarks/run_nas_benchmark/NPB3.4-MPI/: run_nas.sh
run_benchmarks/run_nas_benchmark/NPB3.4-MPI/BT/: bt_data.mod  mpinpb.mod  npbparams.h
run_benchmarks/run_nas_benchmark/NPB3.4-MPI/CG/: cg_data.mod  mpinpb.mod  npbparams.h
run_benchmarks/run_nas_benchmark/NPB3.4-MPI/DT/: npbparams.h
run_benchmarks/run_nas_benchmark/NPB3.4-MPI/EP/: ep_data.mod  mpinpb.mod  npbparams.h
run_benchmarks/run_nas_benchmark/NPB3.4-MPI/FT/: ft_data.mod  mpinpb.mod  npbparams.h
run_benchmarks/run_nas_benchmark/NPB3.4-MPI/IS/: npbparams.h
run_benchmarks/run_nas_benchmark/NPB3.4-MPI/LU/: lu_data.mod  mpinpb.mod  npbparams.h
run_benchmarks/run_nas_benchmark/NPB3.4-MPI/MG/: mg_data.mod  mpinpb.mod  npbparams.h
run_benchmarks/run_nas_benchmark/NPB3.4-MPI/SP/: mpinpb.mod  npbparams.h  sp_data.mod
run_benchmarks/run_nas_benchmark/NPB3.4-MPI/config/: make.def  suite.def
run_benchmarks/run_nas_benchmark/NPB3.4-MPI/sys/: setparams
run_benchmarks/run_nas_benchmark/ep.C.x_trace/: eztrace_log.pallas
run_benchmarks/run_nas_benchmark/ep.C.x_trace/archive_45/: archive.pallas
run_benchmarks/run_nas_benchmark/traces/bt.C.x_trace_5/: eztrace_log.pallas
run_benchmarks/run_nas_benchmark/traces/cg.C.x_trace_5/: eztrace_log.pallas
run_benchmarks/run_nas_benchmark/traces/dt.C.x_trace_3/: eztrace_log.pallas
run_benchmarks/run_nas_benchmark/vectors/: .gitignore
test/: CMakeLists.txt  check_trace.py  find_loop.cpp  sequence_durations.cpp  test_collection.cpp  test_hash.cpp  test_utils.sh  test_vector.cpp  write_benchmark.c  write_benchmark.cpp  write_benchmark.sh
test/mpi/: CMakeLists.txt  mpi_benchmark.c
(+4326 files in other folders)
